# Music-Classification

./: .gitignore  README.md  VGGNet16.ipynb  audio_to_spectogram.ipynb  audio_to_spectogram_v2.ipynb  densenet.ipynb  metadata_prepare.ipynb  metadata_preprocess.ipynb  mfcc_data.ipynb  mfcc_extract.py  mfcc_nn.ipynb  mfcc_nn2.ipynb  najlepszy_model.keras  pyproject.toml  spectrogram_extract.py  utils.py
.codebuddy/: summary.md
MLP/: best_model_fma.keras  best_model_gtzan_68.keras  best_model_gtzan_v2.keras  mfcc_data.csv  mfcc_data.ipynb  mfcc_data_gtzan.ipynb  mfcc_data_gtzan_v1.csv  mfcc_data_gtzan_v2.csv  mfcc_nn_gtzan.ipynb  mfcc_nn_gtzan_v0.ipynb  mfcc_nn_v1_fma.ipynb  mfcc_nn_v2_gtzan.ipynb
VGGNet16/: VGGNet16.ipynb
dataset/: spectrogram.csv
densenet/: densenet - 121 - 10 epochs - cross val.ipynb  densenet - 121 - 100 epochs - adamW - 5e-5 - 1e-2 - 1e-8.ipynb  densenet - 121 - 100 epochs.ipynb  densenet - 121 - 25 epoch - adamW - 3e-4 1e-4 1e-8.ipynb  densenet - 121 - 25 epochs - adamW - 1e-4 - 1e-2 - 1e-8.ipynb  densenet - 121 - 25 epochs - adamW - 5e-4 1e-2 1e-8.ipynb  densenet - 121 - 25 epochs - dropout.ipynb  densenet - 169 - 25 - epochs.ipynb  densenet - 169 - 25 epochs - KF.ipynb  densenet - 169 - 25 epochs - dropout.ipynb  densenet.ipynb  densenet_attention.ipynb  densenet_attention_1.ipynb  densenet_attention_2.ipynb  densenet_attention_3.ipynb  densenet_cross_val.ipynb  densenet_gradcam.ipynb  run_trained_model.ipynb  run_trained_model_cross_val.ipynb
fma/: audio_to_spectogram_v2.ipynb  metadata_preprocess_fma.ipynb  mfcc_extract_fma.py
(+150 files in other folders)
