[project]
name = "music-classification"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "tensorflow-metal (>=1.2.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false

[tool.poetry]
package-mode = false